--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title:        "block-Log"
-description:  "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolor"
+title:        “R no CISM“
+description:  “Uma introdução em R para os iniciantes”
 baseurl:      "" # the subpath of your site, e.g. /blog/
 url:          "http://yourdomain.com" # the base hostname & protocol for your site
 permalink:    /:year/:title
-github:       "yourusername"
-twitter:      "yourusername"
-email:        "mail@example.com"
+github:       "https://github.com/LucyFerMon/"
+twitter:      “LucyFerMon”
+email:        “lucia.fmontoya@gmail.com"
 disqus-id:    "example" #leave blank if you dont want comments.
 
 # Build settings
