--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title:        "block-Log"
-description:  "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolor"
+title:        "R no CISM"
+description:  "aprendizagem de R no CISM"
 baseurl:      "" # the subpath of your site, e.g. /blog/
-url:          "http://yourdomain.com" # the base hostname & protocol for your site
+url:          "lucyfermon.github.io" # the base hostname & protocol for your site
 permalink:    /:year/:title
-github:       "yourusername"
-twitter:      "yourusername"
-email:        "mail@example.com"
-disqus-id:    "example" #leave blank if you dont want comments.
+github:       "joebrew"
+twitter:      "bcndata"
+email:        "joebrew@gmail.com"
+# disqus-id:    "example" #leave blank if you dont want comments.
 
 # Build settings
 markdown:     kramdown
